Fixed task delete button alignment

--- a/src/components/PlannerTask/PlannerTask.scss
+++ b/src/components/PlannerTask/PlannerTask.scss
@@ -137,3 +137,7 @@
 .priority-label--low {
   background-color: #21A647;
 }
+
+.space-between {
+  justify-content: space-between;
+}
